<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Ticket Simply</string>
    <string name="app_tag">Simplify your bus operations</string>
    <string name="preference_file_name">prefrence</string>
    <string name="no_network_msg">Network Not Available</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="pdfurl_error">PDF url is not present</string>
    <string name="logo">logo</string>
    <string name="empty" />
    <string name="reset">Reset</string>
    <string name="reset_login">Reset Login</string>
    <string name="already_logged_in">TS App is open on another device. Click \"Use Here\" to continue in this device.</string>
    <string name="cancel">Cancel</string>
    <string name="use_here" translatable="false">Use Here?</string>
    <string name="use_here2">Use Here</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="onetouchlogin">One-touch Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="domain">Domain</string>
    <string name="notAvailable">N/A</string>
    <string name="new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_login">Enter OTP to Login</string>
    <string name="edit_number">Edit Number</string>
    <string name="busTickets">Bus tickets</string>
    <string name="search">Search</string>
    <string name="search_bp">Search boarding point</string>
    <string name="search_dp">Search dropping point</string>
    <string name="enterSource">Enter Source</string>
    <string name="enterDestination">Enter Destination </string>
    <string name="selectDate">Select Departure Date</string>
    <string name="recentSearch">Recent searches</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="book_now">BOOK NOW</string>
    <string name="selectReturnDate">Select Return Date</string>
    <string name="CALENDER_DATE">calenderDate</string>
    <string name="SCREEN_TAG">screenTag</string>
    <string name="PASSPORT">passport</string>
    <string name="back">Back</string>
    <string name="otp_sent_message">OTP sent to your registered mobile number</string>
    <string name="selectOnwardDate">Select Date</string>
    <string name="selectReturnDateLower">Select Return Date</string>
    <string name="CITY_SELECTION_TYPE">city selection type</string>
    <string name="SOURCE_SELECTION">source selection</string>
    <string name="DESTINATION_SELECTION">destination selection</string>
    <string name="selectSource">Select Source</string>
    <string name="selectDestination">Select Destination</string>
    <string name="SELECTED_CITY_NAME">selectedCityName</string>
    <string name="SELECTED_CITY_ID">selectedCityId</string>
    <string name="mandatory_fields_cant_be_blank">Mandatory fields cannot be blank</string>
    <string name="SELECTED_CITY_TYPE">selected city type</string>
    <string name="JOURNEY_DATE">journeyDate</string>
    <string name="ONWARDS_DATE">Onwards Date</string>
    <string name="TRIP_TYPE">trip type</string>
    <string name="TICKET_NUMBER">ticket number</string>
    <string name="CHANGE_DOMAIN">change domain</string>
    <string name="YES">Yes</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="tag_block_seat">tag block seat</string>
    <string name="userType">User type</string>
    <string name="blockType">Block type</string>
    <string name="blockDuration">Block time duration</string>
    <string name="releaseTime">Release Time</string>
    <string name="selectReccuringDays">Select recurring days</string>
    <string name="blockAll">Block all available seats</string>
    <string name="selectAgent">Select Agent</string>
    <string name="selectBranch">Select Branch</string>
    <string name="selectUser">Select User</string>
    <string name="selectStageUser">Select stage user</string>
    <string name="dateFormat">EE, dd MMM</string>
    <string name="timeFormat">EE, dd MMM HH:mm</string>
    <string name="period">%1$s – %2$s</string>
    <string name="toDate">To date</string>
    <string name="fromDate">From date</string>
    <string name="selectFromDate">Select From Date</string>
    <string name="selectToDate">Select To Date</string>
    <string name="from">From</string>
    <string name="blocking">Blocking</string>
    <string name="noSeatSelected">No Seat Selected</string>
    <string name="edit">Edit</string>
    <string name="modifyDetails">btnModifyDetails</string>
    <string name="selectSeat">Select seat</string>
    <string name="SELECTED_SEARCHED_NAME">selectedCityName</string>
    <string name="SELECTED_SEARCHED_ID">selectedCityId</string>
    <string name="SELECTED_SEARCHED_TYPE">selected city type</string>
    <string name="blockSeats">Block Seats</string>
    <string name="selectUserType">Select user type</string>
    <string name="selectBlockType">Select block type</string>
    <string name="selectUnblockType">Select unblock type</string>
    <string name="proceed">Proceed</string>
    <string name="selected">Selected</string>
    <string name="selectAllSeat">Select All Seats to Block</string>
    <string name="selectedAllSeat">Selected All Seats to Block</string>
    <string name="selectedAvailableSeats">Selected all available seats</string>
    <string name="allAvailableSeatsSelected">All Available seats selected</string>
    <string name="confirmSeats">Please confirm the blocked seats</string>
    <string name="goBack">Go Back</string>
    <string name="noOfSeats">No. of Seats</string>
    <string name="selectedSeatNo">Selected seat number</string>
    <string name="blockContent">Selected seat(s) will be assigned for default Head Office Branch</string>
    <string name="blockContentUserTypes">Selected seat(s) will be assigned for </string>
    <string name="unBlockContent">Selected seat(s) will be available for booking</string>
    <string name="selectedSeatsHeading">Selected Seat(s)</string>
    <string name="lower">Lower</string>
    <string name="upper">Upper</string>
    <string name="alertContent">Fingerprint not added, please login with username and password first to add fingerprint form settings</string>
    <string name="okay">Okay</string>
    <string name="poweredByBitla">Powered by Bitla</string>
    <string name="poweredBy">Powered by</string>
    <string name="enter_domain">Enter Domain</string>
    <string name="simply_monitor_and_update_the_services">Simply monitor and update the services</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="add">ADD</string>
    <string name="verifyAndAdd">Verify &amp; Add New User</string>
    <string name="sendOtp">Send OTP</string>
    <string name="reset_password">Reset Password?</string>
    <string name="reset_password_txt">Reset Password</string>
    <string name="code">Code</string>
    <string name="additional_fare">Additional Fare</string>
    <string name="setNewPassword">Set new Password</string>
    <string name="setPassword">Set Password</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="alternative_mobile_number">Alternative Mobile Number</string>
    <string name="primary_mobile_number">Primary Mobile Number</string>
    <string name="reset_password_caption"><![CDATA[Please enter the registered mobile number to receive OTP & reset password]]></string>
    <string name="otp">otp</string>
    <string name="validOtp">Please enter valid OTP</string>
    <string name="country">Country</string>
    <string name="countryCode">Country Code</string>
    <string name="countryCodeNum">+91</string>
    <string name="passKey">key</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dashboard">Dashboard</string>
    <string name="pick_up_chart">Pick-up Charts</string>
    <string name="pick_up_van_chart">Pickup Van Chart</string>
    <string name="pickup_chart">Pickup Chart</string>
    <string name="reports">Reports</string>
    <string name="report">Report</string>
    <string name="downloading">downloading…</string>
    <string name="bookings">Bookings</string>
    <string name="new_booking">New Booking</string>
    <string name="view_ticket">View ticket</string>
    <string name="update_passenger_details">Update Passenger Details</string>
    <string name="confirm_cancellation">Confirm Cancellation</string>
    <string name="send_sms">Send SMS</string>
    <string name="announcement">Announcement</string>
    <string name="lock_chart">Lock Chart</string>
    <string name="yet_to_board">Yet to Board</string>
    <string name="edit_chart">Edit Chart</string>
    <string name="extend_fare_settings">Extend Fare Settings</string>
    <string name="block">Block</string>
    <string name="update_rate_card">Modify Reservation</string>
    <string name="rapid_book">Rapid Book</string>
    <string name="service_details">Update Details</string>
    <string name="sendSms">Send SMS</string>
    <string name="passenger">Passenger</string>
    <string name="check_in">Check-In</string>
    <string name="boarding_point">Boarding Point</string>
    <string name="confirm">Confirm</string>
    <string name="update_passenger_status">Update Passenger Status</string>
    <string name="credit_debit">Credit / Debit Card</string>
    <string name="enter_last_4_digits_of_credit_debit_card">Enter last 4 digits of Credit/Debit card</string>
    <string name="nothing_to_show">Nothing to Show</string>
    <string name="close">Close</string>
    <string name="view_reservation_chart">View Reservation Chart</string>
    <string name="dropped_off">Dropped Off</string>
    <string name="missing_status">Missing</string>
    <string name="no_show">No Show</string>
    <string name="boarded_status">Boarded</string>
    <string name="unboarded_status">Unboarded</string>
    <string name="luggage">Luggage</string>
    <string name="close_reservation">Close Reservation</string>
    <string name="ci">CI</string>
    <string name="note_credit_debit_card">NOTE: Continue booking only payment is received.</string>
    <string name="frequent_traveller">Frequent traveller</string>
    <string name="device_id">Device ID:</string>
    <string name="re_login">Re-Login</string>
    <string name="crew_toolkit">Crew-Toolkit Checklist</string>
    <string name="trip_complete">Trip complete</string>
    <string name="view_pickup_chart_pdf">View pickup chart PDF</string>
    <string name="download_pickup_chart">Download pickup chart</string>
    <string name="seat_wise_fare">Seat Wise Fare</string>
    <string name="modify_fare">Modify Fare</string>
    <string name="modify_reservation">Modify Reservation</string>
    <string name="stage_summary">Stage Summary</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="rate_card">Rate Card</string>
    <string name="self_audit_form">Self Audit Form</string>
    <string name="seat_numbers">Seat Numbers</string>
</resources>