<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <!--<item
        android:id="@+id/get_current_location"
        android:icon="@drawable/current_location"
        android:title="@string/current_location" />-->

    <item
        android:id="@+id/send_sms"
        android:icon="@drawable/send_sms"
        android:title="@string/send_sms" />
    <item
        android:id="@+id/edit_chart"
        android:icon="@drawable/edit_chart_button_new_booking_flow"
        android:title="@string/edit_chart" />

    <item
        android:id="@+id/announcement"
        android:icon="@drawable/iannouncement"
        android:title="@string/announcement" />
    <item
        android:id="@+id/update_service_details"
        android:icon="@drawable/update_service_details"
        android:title="@string/service_details" />

    <item
        android:id="@+id/Update_ratecard"
        android:icon="@drawable/update_rate_card"
        android:title="@string/update_rate_card" />
    <item
        android:id="@+id/extend_fare_settings"
        android:icon="@drawable/ic_extend_fare_settings"
        android:title="@string/extend_fare_settings" />
    <item
        android:id="@+id/close_reservation_chart"
        android:icon="@drawable/ic_extend_fare_settings"
        android:title="@string/close_reservation" />


    <item
        android:id="@+id/lock_chart"
        android:icon="@drawable/lock_chart"
        android:title="@string/lock_chart" />

    <item
        android:id="@+id/itemCrewToolkit"
        android:icon="@drawable/ic_crew_toolkit"
        android:title="@string/crew_toolkit" />

    <item
        android:id="@+id/selfAuditFormMI"
        android:icon="@drawable/assessment"
        android:title="@string/self_audit_form" />

</menu>
