<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_bg">

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView13"
            style="@style/TextStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_passenger_status"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/multiSeatDialogCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/layout_rounded_shape_border_radius_8dp_black"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/multiSeatTitleTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/seat_numbers"
                style="@style/TextStyleBold"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/multiSeatSelectRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:padding="8dp"
                tools:itemCount="2"
                tools:listitem="@layout/multi_checkbox_horizontal_item"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/multiSeatTitleTV"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <RadioButton
            android:id="@+id/boarded"
            style="@style/TextStyleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boarded_status"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/droped_off"
            style="@style/TextStyleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dropped_off"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="16dp" />

        <RadioButton
            android:id="@+id/missing"
            style="@style/TextStyleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/missing_status"
            android:textColor="@color/color_03_review_02_moderate"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="16dp" />

        <RadioButton
            android:id="@+id/no_show"
            style="@style/TextStyleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_show"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="16dp" />

        <RadioButton
            android:id="@+id/unboarded"
            style="@style/TextStyleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unboarded_status"
            android:textColor="@color/colorRed2"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="16dp" />

        <RadioButton
            android:id="@+id/yet_to_board"
            style="@style/TextStyleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yet_to_board"
            android:textColor="@color/colorRed2"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="16dp" />
        <RadioButton
            android:id="@+id/check_in_status"
            style="@style/TextStyleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_in"
            android:visibility="gone"
            android:textColor="@color/colorRed2"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="16dp" />


    </RadioGroup>

    <android.widget.Button
        android:id="@+id/btn_dark"
        style="@style/TextStyleBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/button_secondary_bg"
        android:text="@string/goBack"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup"
        app:layout_constraintWidth_percent="0.40" />

    <android.widget.Button
        android:id="@+id/btn_light"
        style="@style/TextStyleBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/confirm_cancellation"
        android:singleLine="true"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_dark"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup"
        app:layout_constraintWidth_percent="0.60" />


</androidx.constraintlayout.widget.ConstraintLayout>