<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:orientation="vertical">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_alert" />

        <TextView
            android:id="@+id/tvRegistrationMsg"
            style="@style/TextStyleNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/empty"
            android:textColor="@color/colorBlackShadow" />

        <TextView
            style="@style/TextStyleNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/device_id"
            android:textColor="@color/colorBlackShadow" />

        <TextView
            android:id="@+id/tvDeviceId"
            style="@style/TextStyleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/notAvailable"
            android:textColor="@color/colorBlackShadow"
            android:textSize="@dimen/sp18" />

        <android.widget.Button
            android:id="@+id/btnReLogin"
            style="@style/TextStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_16"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/re_login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</LinearLayout>
